# ctip-oss

./: .env.example  .gitignore  CHEATSHEET_MESSE.md  CLAUDE.md  README.md  alembic.ini  ctip.sh  pyproject.toml  pytest.ini  trichome.db
.claude/: settings.local.json
.devcontainer/: devcontainer.json
active_learning/analysis/: drift.py
active_learning/api/: router.py
active_learning/application/: al_pipeline.py
active_learning/queuing/: __init__.py  priority_queue.py
active_learning/retraining/: __init__.py  trigger.py
active_learning/sampling/: __init__.py  disagreement.py  entropy.py  hard_negative.py  uncertainty.py
alembic/: env.py
alembic/versions/: 20260525_1319_481ac4c6717a_initial_schema.py
analytics/: __init__.py
analytics/api/: __init__.py  router.py  schemas.py
analytics/export/: __init__.py  csv_exporter.py  json_exporter.py  pdf_exporter.py
analytics/reporting/: __init__.py  scientific_report.py  session_report.py
analytics/visualization/: __init__.py  plotter.py
annotation/: __init__.py
annotation/api/: router.py
annotation/application/: annotation_pipeline.py
annotation/cvat/: client.py
annotation/label_studio/: __init__.py  client.py
annotation/review/: __init__.py  agreement.py  queue.py
annotation/sam_assisted/: __init__.py  prompter.py
annotation/statistics/: __init__.py  stats.py
apps/cli/: main.py
backend/: config.py  database.py  main.py
backend/dependencies/: __init__.py  gpu.py
backend/middleware/: __init__.py  auth.py  gpu_guard.py  request_logger.py
backend/models/: __init__.py  dataset.py  experiment.py  job.py  model_registry.py  session.py
backend/tasks/: batch_queue.py  task_router.py  task_store.py
backend/utils/: compute.py  env_file.py
backend/websocket/: __init__.py  manager.py  router.py
benchmarks/focus/: focus_benchmark.py  results_20260525_075902.json
benchmarks/inference/: inference_benchmark.py  results_20260525_131618.json
benchmarks/maturity/: maturity_benchmark.py  results_20260525_075644.json  results_20260525_075936.json
benchmarks/measurement/: measurement_benchmark.py  results_20260525_075757.json  results_20260525_075831.json  results_20260525_075948.json
benchmarks/morphology/: morphology_benchmark.py  results_20260525_075648.json  results_20260525_075753.json  results_20260525_075944.json
benchmarks/video/: results_20260525_075838.json  results_20260525_075954.json  video_benchmark.py
configs/training/: yolo11n_fast.yaml  yolo11s_detection.yaml
data/db/: trichome.db
detection/: __init__.py
detection/api/: router.py
detection/application/: detect_pipeline.py
detection/domain/: confidence_calibrator.py  detector.py  ensemble.py  tiled_inference.py
detection/infrastructure/: yolo_backend.py
detection/schemas/: schemas.py
detection/tests/: test_detector.py
docker/: docker-compose.annotation.yml  docker-compose.inference.yml  docker-compose.training.yml  docker-compose.yml
docker/base/: Dockerfile.base
docker/dev/: Dockerfile.dev  create_pkg_stubs.py
docker/inference/: Dockerfile.inference
docker/nginx/: nginx.conf  nginx.conf.template  nginx.inference.conf
docker/training/: Dockerfile.training
docs/deployment/: annotation_stack.md  network_setup.md  nvidia_container_toolkit.md  wsl2_setup.md
docs/github-wiki/: API-Reference.md  Architecture.md  Data-Collection.md  Distributed-Training.md  Fine-Tuning.md  Home.md  Inference-and-Analysis.md  Infrastructure.md  Installation-Linux.md  Installation-Windows.md  Installation-macOS.md  Labeling.md  Morphology-CNN.md  Ollama-Integration.md  Setup-Wizard.md  Streaming-Datasets.md  Temporal-Tracking.md  Training.md  Troubleshooting.md  VLM-Ensemble.md  Workflow-Guide.md  _Footer.md  _Sidebar.md
docs/progress/: benchmark_history.md  current_focus.md  implementation_log.md  pending.md  phase_status.md  technical_debt.md
focus/: __init__.py
focus/api/: __init__.py  router.py
focus/guidance/: __init__.py  autofocus.py  heatmap.py
focus/metrics/: __init__.py  composite.py  fft_metrics.py  laplacian.py  tenengrad.py
focus/stacking/: __init__.py  stack_prep.py
frontend/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend-preview/: dashboard.html
inference/: __init__.py
inference/api/: __init__.py  main.py  router.py
inference/local/: runner.py
inference/onnx_runtime/: __init__.py  runner.py
inference/tensorrt_engine/: __init__.py  builder.py  exporter.py  runner.py
maturity/: __init__.py  scientific_background.md
maturity/api/: __init__.py  router.py
maturity/application/: __init__.py  maturity_pipeline.py
maturity/domain/: __init__.py  analyzer.py  color_features.py  degradation.py  scientific_rules.py  texture_features.py  translucency.py
maturity/explainability/: __init__.py  feature_report.py  gradcam.py
maturity/infrastructure/: __init__.py  classifier.py
maturity/schemas/: __init__.py  schemas.py
measurement/: __init__.py
measurement/api/: __init__.py  router.py
measurement/application/: __init__.py  measurement_pipeline.py
measurement/calibration/: stage_micrometer.py
measurement/domain/: __init__.py  measurer.py  profile_manager.py  propagation.py
measurement/schemas/: __init__.py  schemas.py
morphology/: __init__.py
morphology/api/: __init__.py  router.py
morphology/application/: __init__.py  morphology_pipeline.py
morphology/classification/: classifier.py
morphology/domain/: __init__.py  density_map.py  geometric.py  stalk_detector.py
morphology/schemas/: __init__.py  schemas.py
morphology/training/: __init__.py  cnn_trainer.py
nginx-local/: nginx.conf  nginx.conf.template
research/cannabinoid_research/: __init__.py  thc_cbn_degradation.md  thc_trichome_correlation.md
research/cv_research/: small_object_detection_challenges.md
scripts/: dev-start.sh  export-wiki.mjs  full_pipeline_test.py  push-wiki.sh
segmentation/api/: __init__.py  (+1 more)
swagger-ui/: index.html
tests/: __init__.py  conftest.py
video_pipeline/: __init__.py
vlm_labeling/: provider_registry.py
(+270 files in other folders)
