[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "trichome-analysis"
version = "0.1.0"
description = "Research-grade Cannabis Trichome Analysis System — Computer Vision & Microscopy AI Platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Trichome Analysis Research Team" },
]
requires-python = ">=3.12"
keywords = [
    "cannabis",
    "trichome",
    "computer-vision",
    "microscopy",
    "instance-segmentation",
    "deep-learning",
    "maturity-analysis",
    "active-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    # Core ML
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "ultralytics>=8.2.0",
    "onnx>=1.16.0",
    "onnxruntime-gpu>=1.18.0",

    # Computer Vision
    "opencv-python-headless>=4.10.0",
    "scikit-image>=0.23.0",
    "Pillow>=10.3.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",

    # Scientific Computing
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",

    # Data Augmentation
    "albumentations>=1.4.0",

    # Configs & Validation
    "hydra-core>=1.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "omegaconf>=2.3.0",

    # Experiment Tracking
    "mlflow>=2.13.0",
    "wandb>=0.17.0",

    # Dataset Management
    "fiftyone>=0.24.0",
    "dvc>=3.51.0",

    # API & Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "gradio>=4.36.0",

    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",

    # Reporting
    "reportlab>=4.2.0",
    "Jinja2>=3.1.0",
    "weasyprint>=62.0",

    # Utilities
    "rich>=13.7.0",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",

    # File I/O
    "h5py>=3.11.0",
    "zarr>=2.18.0",
    "pyarrow>=16.1.0",

    # Data Processing
    "shapely>=2.0.0",
    "rtree>=1.2.0",
    "networkx>=3.3",
]

[project.optional-dependencies]
vlm = [
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.0",
    "timm>=1.0.0",
    # flash-attn is NOT on PyPI as a stable wheel for all CUDA/PyTorch combos.
    # Installed separately in Dockerfile after PyTorch:
    #   pip install flash-attn --no-build-isolation
]
sam = [
    "segment-anything>=1.0",
    # segment-anything-2 (SAM2) is NOT on PyPI — installed via git in Dockerfile:
    #   pip install git+https://github.com/facebookresearch/segment-anything-2.git
]
grounding_dino = [
    "groundingdino-py>=0.1.0",
]
# ── Remote VLM provider SDKs ──────────────────────────────────────────────────
# All optional — install only what you need based on which provider you use.
# Free options: groq, google (gemini-1.5-flash), huggingface
remote_vlm = [
    "openai>=1.35.0",                    # OpenAI GPT-4o / Together AI (same SDK)
    "anthropic>=0.28.0",                 # Anthropic Claude
    "google-generativeai>=0.7.0",        # Google Gemini
    "groq>=0.9.0",                       # Groq (Llama, Mixtral — free tier)
]
annotation = [
    "cvat-sdk>=2.14.0",
    "label-studio-sdk>=1.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.103.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "nbconvert>=7.16.0",
]
all = [
    "trichome-analysis[vlm,sam,grounding_dino,annotation,remote_vlm,dev]",
]

[project.scripts]
trichome = "apps.cli.main:app"
trichome-detect = "apps.cli.commands.detect:app"
trichome-segment = "apps.cli.commands.segment:app"
trichome-maturity = "apps.cli.commands.maturity:app"
trichome-train = "apps.cli.commands.train:app"
trichome-benchmark = "apps.cli.commands.benchmark:app"
trichome-annotate = "apps.cli.commands.annotate:app"
trichome-export = "apps.cli.commands.export:app"

[tool.hatch.build.targets.wheel]
packages = [
    "apps",
    "services",
    "shared",
    "detection",
    "segmentation",
    "maturity",
    "morphology",
    "measurement",
    "training",
    "inference",
    "microscopy",
    "annotation",
    "active_learning",
    "vlm_labeling",
    "video_pipeline",
    "focus",
    "tracking",
    "analytics",
    "exports",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]
"notebooks/**/*.py" = ["ANN", "E402"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "fiftyone.*",
    "albumentations.*",
    "ultralytics.*",
    "sklearn.*",
    "scipy.*",
    "skimage.*",
    "mlflow.*",
    "wandb.*",
    "gradio.*",
]
ignore_missing_imports = true

# pytest configuration is in pytest.ini — removed from here to avoid
# "ignoring pytest config in pyproject.toml" warning (TDB-009).

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "notebooks/*",
    "scripts/*",
    "docs/*",
    "docker/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 70
